<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PipePanic</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
	<string name="toggle_fullscreen">Fullscreen</string>
    <string name="share_screenshot">Share a screenshot</string>
    <string name="clear_highscore">Clear highscore</string>
    <string name="clear_highscore_confirm">Are you sure you want to reset the high score?</string>
    <string name="about">About</string>
    <string name="startnewgame">Start a new game</string>
    <string name="welcome">Welcome to PipePanic, a plumbers favorite game!</string>
    <string name="battlemode">BATTLE MODE: \n %s</string>
    <string name="difficulty">DIFFICULTY: \n %s</string>
    <array name="difficulties">
        <item>easy</item>
        <item>medium</item>
        <item>hard</item>
        <item>very hard</item>
    </array>
</resources>
